--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "scripts": {
     "start": "nodemon ./src/server/index.ts",
-    "test:unit": "jest",
+    "test": "jest --env=jsdom",
     "hermione": "./node_modules/.bin/hermione --set all",
     "hermione:gui": "./node_modules/.bin/hermione gui --set all",
     "build": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "@bem-react/classname": "^1.5.12",
+    "@types/jest": "^28.1.6",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "chai": "^4.3.4",
@@ -18,6 +21,7 @@
     "faker": "^5.5.3",
     "html-reporter": "^9.2.0",
     "immer": "^9.0.6",
+    "jest-environment-jsdom": "^28.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -29,6 +33,9 @@
     "rxjs": "^7.4.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.3",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/mini-css-extract-plugin": "^2.3.0",
@@ -42,7 +49,7 @@
     "css-loader": "^6.3.0",
     "hermione": "^5.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.3.0",
+    "jest": "^28.1.3",
     "mini-css-extract-plugin": "^2.4.2",
     "nodemon": "^2.0.13",
     "sass": "^1.42.1",
